# Youtube_transcript_chatbot

./: README.md  app.py  logic.py  main.py  pyproject.toml
.streamlit/: config.toml
