[project]
name = "youtube-transcript-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "google-generativeai>=0.8.6",
    "huggingface-hub>=1.14.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-huggingface>=1.2.2",
    "python-dotenv>=1.2.2",
    "transformers>=5.8.0",
    "youtube-transcript-api>=1.2.4",
]
