[project]
name = "youtube-transcript-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "faiss-cpu>=1.7.4",
    "google-generativeai==0.7.2",
    "huggingface-hub>=0.23.0",
    "langchain==0.2.16",
    "langchain-community==0.2.16",
    "langchain-core==0.2.38",
    "langchain-google-genai==1.0.10",
    "langchain-huggingface==0.0.3",
    "langchain-openai>=0.1.23",
    "python-dotenv>=1.0.1",
    "pytube>=15.0.0",
    "streamlit>=1.35.0",
    "torchvision>=0.26.0",
    "transformers>=4.41.0",
    "youtube-transcript-api>=0.6.2",
]
